--- a/package.json
+++ b/package.json
@@ -15,15 +15,8 @@
   "main": ".eslintrc.js",
   "scripts": {},
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.0.0",
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.8",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "@shopify/eslint-plugin": "^42.0.1",
+    "eslint": "^8.20.0",
+    "prettier": "^2.7.1"
   }
 }
