--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/BePower/code-style/issues"
   },
   "version": "1.0.1",
-  "main": ".eslintrc.js",
+  "main": ".eslintrc.json",
   "scripts": {},
   "dependencies": {
     "@shopify/eslint-plugin": "^42.0.1",
