--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
     "packages/*"
   ],
   "useNx": false,
-  "version": "2.0.4"
+  "version": "2.0.4",
+  "command": {
+    "version": {
+      "message": "chore(release): publish %s"
+    }
+  }
 }
