--- a/lerna.json
+++ b/lerna.json
@@ -3,9 +3,10 @@
     "packages/*"
   ],
   "useNx": false,
-  "version": "2.0.5",
+  "version": "independent",
   "command": {
     "version": {
+      "conventionalCommits": true,
       "message": "chore(release): publish %s"
     }
   }
