ci: :sparkles: Publishing using lerna

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -21,6 +21,6 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npm install
-      - run: npm publish
+      - run: npm run lerna publish from-package --registry https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
