--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -9,7 +9,9 @@
     "directory": "packages/eslint-plugin"
   },
   "keywords": [
-    "eslint"
+    "eslint",
+    "eslint-plugin",
+    "eslint-config"
   ],
   "author": "BePower",
   "license": "MIT",
