--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -21,15 +21,28 @@
     "url": "https://github.com/BePower/code-style/issues"
   },
   "homepage": "https://github.com/BePower/code-style#readme",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@shopify/eslint-plugin": "^42.0.1"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.3",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.6",
     "eslint": "^8.3.0",
     "eslint-plugin-eslint-plugin": "^5.0.1",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "eslint": "^8.3.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
