--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -18,6 +18,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npm install
+      - run: npx lerna run test
       - run: npx lerna publish from-package --registry https://npm.pkg.github.com --yes
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
