--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -2,7 +2,11 @@
   "name": "@bepower/eslint-plugin",
   "version": "1.0.1",
   "description": "Opinionated eslint configuration (mostly Shopify's)",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "exports": "./dist/index.js",
+  "files": [
+    "/dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BePower/code-style.git",
@@ -22,18 +26,33 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "tsc",
+    "pretest": "npm run build",
     "test": "jest"
   },
   "dependencies": {
     "@shopify/eslint-plugin": "^42.0.1"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.3",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.3.0",
     "eslint-plugin-eslint-plugin": "^5.0.1",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "eslint": "^8.3.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
