--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -8,15 +8,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      
+
       - name: Regenerate Readme
         run: node scripts/regenerate-readme.js
 
+        - name: check for changes
+          run: |
+            if git diff --exit-code; then
+              echo "::set-env name=changes_exist::true"
+            else
+              echo "::set-env name=changes_exist::false"
+            fi
+
       - name: Configure git, commit and push
+        if: ${{ env.changes_exist == 'true' }}
         run: |
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config user.name "$GITHUB_ACTOR"
