--- a/packages/eslint-plugin/.eslintrc
+++ b/packages/eslint-plugin/.eslintrc
@@ -2,15 +2,27 @@
   "extends": [
     "eslint:recommended",
     "plugin:eslint-plugin/recommended",
-    "plugin:node/recommended"
+    "plugin:node/recommended",
+    "plugin:@shopify/typescript",
+    "plugin:@shopify/typescript-type-checking",
+    "plugin:@shopify/prettier",
+    "plugin:@shopify/node"
   ],
+  "rules": {
+    "prettier/prettier": "warn"
+  },
   "env": {
     "node": true
   },
-  "overrides": [{
-    "files": ["test/**/*.test.?s"],
-    "env": {
-      "jest": true
+  "parserOptions": {
+    "project": "./tsconfig.eslint.json"
+  },
+  "overrides": [
+    {
+      "files": ["test/**/*.test.?s"],
+      "env": {
+        "jest": true
+      }
     }
-  }]
+  ]
 }
