--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "scripts": {
+    "check": "npm run lint && npm run format",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier -l .",
     "prebuild": "rimraf dist",
     "build": "tsc",
     "pretest": "npm run build",
@@ -44,6 +47,7 @@
     "eslint-plugin-eslint-plugin": "^5.0.1",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
