--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -8,6 +8,9 @@
     "url": "git+https://github.com/BePower/code-style.git",
     "directory": "packages/prettier-config"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "keywords": [
     "prettier"
   ],
@@ -16,5 +19,18 @@
   "bugs": {
     "url": "https://github.com/BePower/code-style/issues"
   },
-  "homepage": "https://github.com/BePower/code-style#readme"
+  "homepage": "https://github.com/BePower/code-style#readme",
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.3",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.1",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  }
 }
