--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -21,13 +21,16 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.3",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "@tsconfig/node16": "^1.0.4",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.2.3",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "prettier": "^2.8.8"
   },
   "jest": {
     "preset": "ts-jest",
