ci: :green_heart: Fixing the plugin/workspace error

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
           "preset": "angular"
         }
       ],
-      "first-time-contributor"
+      "first-time-contributor",
+      "./scripts/regenerate-readme.js"
     ]
   },
   "workspaces": [
     "packages/eslint-plugin",
-    "packages/prettier-config",
-    "./scripts/regenerate-readme.js"
+    "packages/prettier-config"
   ]
 }
