--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,5 +10,6 @@
   "commit": true,
   "commitConvention": "angular",
   "contributors": [],
-  "contributorsPerLine": 7
+  "contributorsPerLine": 7,
+  "badgeTemplate": "[badge-all-contributors]: https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg?style=flat-square"
 }
