ci: :construction_worker: Adding some debug for the custom plugin

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -47,6 +47,9 @@ jobs:
         run: npm run check --workspaces --if-present
 
       - name: Building typescript
+        run: npm run build
+
+      - name: Building typescript in packages
         run: npm run build --workspaces --if-present
 
       - name: Publish
