--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "command": {
     "version": {
-      "message": "chore(release): publish %s"
+      "message": "chore: :bookmark: publish"
     }
   },
   "packages": [
