style: :lipstick: Added prettier config for the whole repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "conventionalCommits.scopes": [
-        "prettier",
-        "eslint",
-        "auto"
-    ]
+  "conventionalCommits.scopes": ["prettier", "eslint", "auto"]
 }
