ci: :zap: Fixed the order (and context) of the check command

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -43,14 +43,14 @@ jobs:
       - name: Testing
         run: npm test --workspaces
 
-      - name: Linting
-        run: npm run check --workspaces --if-present
-
       - name: Building typescript
         run: npm run build
 
       - name: Building typescript in packages
         run: npm run build --workspaces --if-present
+
+      - name: Linting
+        run: npm run check
 
       - name: Publish
         run: npm run release
