--- a/packages/auto-config/package.json
+++ b/packages/auto-config/package.json
@@ -4,7 +4,8 @@
   "description": "Common configuration and dependencies for npm deploy via auto package",
   "main": "auto.config.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [
     "auto",
@@ -23,9 +24,27 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.4",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "auto": {
-    "extends": "./auto.config.js"
+    "plugins": [
+      "npm",
+      "all-contributors",
+      [
+        "conventional-commits",
+        {
+          "preset": "angular"
+        }
+      ],
+      "first-time-contributor"
+    ]
   }
 }
