--- a/packages/auto-config/package.json
+++ b/packages/auto-config/package.json
@@ -2,7 +2,7 @@
   "name": "@bepower/auto-config",
   "version": "0.1.3",
   "description": "Common configuration and dependencies for npm deploy via auto package",
-  "main": "auto.config.js",
+  "main": "./auto.config.js",
   "scripts": {
     "build": "tsc",
     "test": "jest"
