--- a/packages/auto-config/package.json
+++ b/packages/auto-config/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auto-it/all-contributors": "^10.46.0",
     "@auto-it/conventional-commits": "^10.46.0",
+    "@auto-it/core": "^10.46.0",
     "@auto-it/first-time-contributor": "^10.46.0",
     "auto": "^10.46.0",
     "lerna": "^6.6.2"
