--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist coverage",
     "build": "tsc",
     "pretest": "npm run build",
     "test": "jest"
