--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -24,5 +24,5 @@
     }
   ],
   "contributorsPerLine": 7,
-  "badgeTemplate": "[badge-all-contributors]: https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg?style=flat-square"
+  "badgeTemplate": "[badge-all-contributors]: https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg"
 }
