style: :lipstick: Sorting the scopes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["prettier", "eslint", "auto"]
+  "conventionalCommits.scopes": ["auto", "eslint", "prettier"]
 }
