--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.4",
+    "@tsconfig/recommended": "^1.0.3",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
     "jest": "^29.5.0",
