--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -32,19 +32,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "@shopify/eslint-plugin": "^42.1.0"
+    "@shopify/eslint-plugin": "^43.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.3",
-    "eslint": "^8.41.0",
-    "jest": "^29.5.0",
-    "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "eslint": "^8.41.0"
+    "eslint": "^8.51.0"
   },
   "jest": {
     "preset": "ts-jest",
