--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -4,6 +4,7 @@
   "description": "Opinionated eslint configuration (mostly Shopify's)",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
+  "bin": "./dist/cli.js",
   "files": [
     "/dist"
   ],
@@ -32,7 +33,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@shopify/eslint-plugin": "^43.0.0"
+    "@shopify/eslint-plugin": "^43.0.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
