--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -3,12 +3,18 @@
   "version": "2.0.0",
   "description": "Opinionated prettier configuration",
   "main": "index.json",
+  "bin": "./dist/cli.js",
+  "files": [
+    "/dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BePower/code-style.git",
     "directory": "packages/prettier-config"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "tsc",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
   },
   "keywords": [
@@ -27,6 +33,7 @@
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
@@ -36,5 +43,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "yargs": "^17.7.2"
   }
 }
