--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -53,5 +53,5 @@ jobs:
       - name: Publish
         run: npm run release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
