--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -3,7 +3,7 @@ name: NPM Package
 on:
   push:
     branches:
-      - 'mainnnn'
+      - 'main'
   workflow_dispatch:
 
 jobs:
@@ -42,7 +42,7 @@ jobs:
         run: npm ci
 
       - name: Testing
-        run: npm test --workspaces
+        run: npm test --workspaces --if-present
 
       - name: Building typescript in packages
         run: npm run build --workspaces --if-present
@@ -51,7 +51,7 @@ jobs:
         run: npm run check
 
       - name: Publish
-        run: npm run release
+        run: 'npx auto shipit --message "ci: :memo: Update CHANGELOG.md [skip ci]"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
