ci: :bug: Fixing the main branch and removing the push to action

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -3,8 +3,7 @@ name: NPM Package
 on:
   push:
     branches:
-      - 'mainnnn'
-  workflow_dispatch:
+      - 'main'
 
 jobs:
   validate-commits:
