--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -51,6 +51,9 @@ jobs:
 
       - name: Version bump check
         run: npx auto version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish
         run: 'npx auto shipit --message "ci: :memo: Update CHANGELOG.md [skip ci]"'
