--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "format": "prettier --write \"**/*.{ts,json,md,yml}\"",
     "lint": "eslint --fix . --ext .ts",
     "check": "npm run format && npm run lint",
-    "build": "tsc",
-    "release": "auto shipit -vv --message \"ci: :memo: Update CHANGELOG.md [skip ci]\" && auto release -vv"
+    "build": "tsc"
   },
   "devDependencies": {
     "@auto-it/all-contributors": "^11.0.4",
