--- a/packages/auto-config/tsconfig.json
+++ b/packages/auto-config/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
-  "include": ["auto.config.ts", "scripts"]
+  "include": ["auto.config.ts", "scripts", "src"]
 }
