--- a/packages/auto-config/.eslintrc
+++ b/packages/auto-config/.eslintrc
@@ -2,7 +2,7 @@
   "rules": {
       "node/shebang": ["error", {
           "convertPath": {
-              "src/**/*.ts": ["^src/(.+?)\\.ts$", "src/$1.js"]
+              "src/**/*.ts": ["^src/(.+?)\\.ts$", "dist/$1.js"]
           }
       }]
   }
