--- a/packages/auto-config/tsconfig.json
+++ b/packages/auto-config/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
-  "include": ["auto.config.ts", "scripts", "src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "outDir": "./dist"
+  },
 }
