feat: :sparkles: Adding more cli tests, refactored a bit [wip] [skip ci]

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "plugin:@bepower/node",
   "parserOptions": {
-    "project": "./tsconfig.eslint.json"
+    "project": "./tsconfig.json"
   }
 }
