--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "prettier --write \"**/*.{ts,json,md,yml}\"",
     "lint": "eslint --fix . --ext .ts",
     "check": "npm run format && npm run lint",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "@auto-it/all-contributors": "^11.0.4",
@@ -27,13 +28,18 @@
     "@bepower/eslint-plugin": "^3.0.0",
     "@bepower/prettier-config": "^3.0.0",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/eslint": "^8.44.7",
+    "@types/jest": "^29.5.9",
+    "@types/node": "^20.9.3",
     "auto": "^11.0.4",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "lerna": "^7.1.4",
-    "typescript": "^5.2.2"
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   },
   "workspaces": [
-    "packages/auto-config",
-    "packages/eslint-plugin",
-    "packages/prettier-config"
+    "packages/*"
   ]
 }
