--- a/packages/auto-config/tsconfig.json
+++ b/packages/auto-config/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json",
-  "include": ["src"],
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist"
   },
+  "include": ["src"]
 }
