--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -37,14 +37,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.3",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
-    "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "eslint": "^8.53.0"
   },
   "peerDependencies": {
     "eslint": "^8.53.0"
