--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -27,15 +27,8 @@
   },
   "homepage": "https://github.com/BePower/code-style#readme",
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.3",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "prettier": "^3.0.3"
   },
   "peerDependencies": {
     "prettier": "^3.0.3"
