--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@tsconfig/recommended/tsconfig.json"
+  "extends": "@tsconfig/recommended/tsconfig.json",
+  "files": [],
+  "references": [
+    {"path": "./packages/auto-config"},
+    {"path": "./packages/eslint-plugin"},
+    {"path": "./packages/prettier-config"},
+  ]
 }
