--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint --fix . --ext .ts",
     "check": "npm run format && npm run lint",
     "build": "tsc --build",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "release": "npx auto version && npx auto shipit --message \"ci: :memo: Update CHANGELOG.md [skip ci]\""
   },
   "devDependencies": {
     "@auto-it/all-contributors": "^11.0.4",
