--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -40,11 +40,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Testing
+      - name: Testing + building
         run: npm test
-
-      - name: Building typescript in packages
-        run: npm run build
 
       - name: Linting
         run: npm run check
