--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,15 +19,19 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  lerna:
-    runs-on: ubuntu-latest
-    steps:
-      - run: npx lerna changed -a
-
   lerna-checkout:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: npx lerna changed -a
+
+  lerna-checkout-fetch:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       - run: npx lerna changed -a
 
   lerna-checkout-npm:
@@ -36,21 +40,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: lts
+          node-version: lts/*
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npx lerna changed -a
-
-  auto:
-    runs-on: ubuntu-latest
-    steps:
-      - run: npx auto version
-
-  auto-checkout:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: npx auto version
 
   auto-checkout-npm:
     runs-on: ubuntu-latest
@@ -58,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: lts
+          node-version: lts/*
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npx auto version
