--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,19 +32,22 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-      - run: npx lerna changed -a
+      - run: npx lerna changed -la --loglevel silly
 
   lerna-checkout-npm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npm ci
-      - run: npx lerna changed -a
+      - run: npx lerna changed -la --loglevel silly
 
   auto-checkout-npm:
     runs-on: ubuntu-latest
@@ -56,4 +59,5 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@bepower'
       - run: npm ci
+      - run: npm run build
       - run: npx auto version
