--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,12 +19,6 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  lerna-checkout:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: npx lerna changed -la --loglevel silly
-
   lerna-checkout-fetch:
     runs-on: ubuntu-latest
     steps:
@@ -32,6 +26,23 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
+      - run: npx lerna changed -la --loglevel silly
+
+  lerna-checkout-unshallow:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: git fetch --unshallow --tags
+      - run: npx lerna changed -la --loglevel silly
+
+  lerna-checkout-fetch-unshallow:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+      - run: git fetch --unshallow --tags
       - run: npx lerna changed -la --loglevel silly
 
   lerna-checkout-npm:
