ci: :sparkles: Adding the inclusion of merged tags

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
   "command": {
+    "changed": {
+      "includeMergedTags": true
+    },
     "version": {
       "message": "chore: :bookmark: publish"
     }
