--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -6,17 +6,56 @@ on:
       - 'mainnnn'
 
 jobs:
-  validate-commits:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [16, 18, 20]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@bepower'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Testing
+        run: npm test
+
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Validate commits
-        uses: webiny/action-conventional-commits@v1.1.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@bepower'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Testing
+        run: npm run check
+
+      - name: Check if nothing changed
+        uses: tj-actions/verify-changed-files@v16
+        with:
+          fail-if-changed: true
 
   test-build-publish:
-    needs: [validate-commits]
+    needs:
+      - test
+      - lint
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -47,7 +86,7 @@ jobs:
         run: npm run check
 
       - name: Publish
-        run: 'npm run release'
+        run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
