ci: :sparkles: Adding the version into the publish message

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
       "includeMergedTags": true
     },
     "version": {
-      "message": "chore: :bookmark: publish"
+      "message": "chore: :bookmark: publish %s"
     }
   },
   "packages": ["packages/*"],
