ci: :pencil2: Fixed the name of the linting step

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Testing
+      - name: Linting
         run: npm run check
 
       - name: Check if nothing changed
