perf(auto): :sparkles: Adding typings and ts config file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "check": "npm run format && npm run lint",
     "prebuild": "rimraf -g packages/*/dist coverage",
     "build": "tsc --build",
+    "postbuild": "npm run postbuild --workspaces --if-present",
     "pretest": "npm run build",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "release": "npx auto version && npx auto shipit --message \"ci: :memo: Update CHANGELOG.md [skip ci]\""
