ci: :green_heart: Removing the useless version placeholder

--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
       "includeMergedTags": true
     },
     "version": {
-      "message": "chore: :bookmark: publish %s"
+      "message": "chore: :bookmark: publish"
     }
   },
   "packages": ["packages/*"],
