--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -82,6 +82,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Testing + building
+        run: npm test
+
+      - name: Linting
+        run: npm run check
+
       - name: Publish
         run: npm run release
         env:
